# bdd_det_yolo

./: .gitignore  README.md  pyproject.toml
config/: bdd_data.yaml
docker/: Dockerfile
docs/source/: data_loader.html  data_prep.html  evaluation.html  index.html  inference.html  main.html  visualize.html
notebook/: analysis.ipynb  data_analysis.ipynb
notebooks/: data_analysis.ipynb  model_selection.ipynb  pred_analysis.ipynb
scripts/: eval.py  train.py
source/: data_loader.py  data_prep.py  evaluation.py  inference.py  main.py  visualize.py
weights/: download.sh
